--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bc7-bz-7Yu">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -578,10 +578,21 @@
                                     <constraint firstAttribute="width" constant="30" id="LNZ-Yi-23s"/>
                                 </constraints>
                             </activityIndicatorView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Seach by a book" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="18t-ce-n3b">
+                                <rect key="frame" x="16" y="102.66666666666667" width="361" height="26.333333333333329"/>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <action selector="searchHandler:" destination="5Qm-2k-1IK" eventType="editingChanged" id="imP-Nk-75C"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4it-v4-wcq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="4it-v4-wcq" firstAttribute="trailing" secondItem="18t-ce-n3b" secondAttribute="trailing" constant="16" id="1rw-xm-dQf"/>
+                            <constraint firstItem="18t-ce-n3b" firstAttribute="leading" secondItem="4it-v4-wcq" secondAttribute="leading" constant="16" id="2Qb-nD-7pp"/>
+                            <constraint firstItem="18t-ce-n3b" firstAttribute="top" secondItem="WeH-YM-Kg7" secondAttribute="bottom" constant="12" id="E9g-OO-94D"/>
                             <constraint firstItem="WeH-YM-Kg7" firstAttribute="top" secondItem="4it-v4-wcq" secondAttribute="top" id="IwQ-45-fuf"/>
                             <constraint firstItem="M96-1Q-jAS" firstAttribute="leading" secondItem="4it-v4-wcq" secondAttribute="leading" constant="16" id="Mtg-u9-0Xv"/>
                             <constraint firstItem="4it-v4-wcq" firstAttribute="bottom" secondItem="M96-1Q-jAS" secondAttribute="bottom" id="NjA-bF-p2g"/>
@@ -605,7 +616,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TwU-2h-jca" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6841.9847328244268" y="0.0"/>
+            <point key="canvasLocation" x="7768.7022900763359" y="0.0"/>
         </scene>
         <!--Percy Jackson: The Lighthing Thief-->
         <scene sceneID="0xT-1w-Kg0">
@@ -837,27 +848,50 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zry-on-kYx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7612.9770992366412" y="0.0"/>
+            <point key="canvasLocation" x="8539.6946564885493" y="0.0"/>
+        </scene>
+        <!--ScroolView-->
+        <scene sceneID="0nY-Sl-AGd">
+            <objects>
+                <viewController title="ScroolView" id="HMK-nb-Gpx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qTn-0x-Vfa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zlT-gg-XiS">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Hr6-1G-P0q"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zlT-gg-XiS" firstAttribute="trailing" secondItem="Hr6-1G-P0q" secondAttribute="trailing" id="1tb-fj-FqY"/>
+                            <constraint firstItem="zlT-gg-XiS" firstAttribute="top" secondItem="Hr6-1G-P0q" secondAttribute="top" id="8Ki-bC-bsj"/>
+                            <constraint firstItem="zlT-gg-XiS" firstAttribute="leading" secondItem="Hr6-1G-P0q" secondAttribute="leading" id="Z3c-W5-Hbv"/>
+                            <constraint firstAttribute="bottom" secondItem="zlT-gg-XiS" secondAttribute="bottom" id="xf9-Xz-VT6"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cH0-Lt-JrC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9254.1984732824421" y="0.0"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="2IC-rO-AbZ">
+        <scene sceneID="pNO-AQ-0FM">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="bCF-w4-Pdv" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="bc7-bz-7Yu" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="KHf-Vk-EbX"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="magnifyingglass" id="8Ox-pD-Dn9">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BTF-EK-OMr">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <color key="selectedImageTintColor" name="Lighter Blue Tone"/>
                     </tabBar>
                     <connections>
-                        <segue destination="5Qm-2k-1IK" kind="relationship" relationship="viewControllers" id="Kpg-tu-xMY"/>
+                        <segue destination="5Qm-2k-1IK" kind="relationship" relationship="viewControllers" id="EJk-16-b4T"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tQw-Ck-1fV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4fy-D0-tbF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5975" y="0.0"/>
+            <point key="canvasLocation" x="6841.9847328244268" y="0.0"/>
         </scene>
     </scenes>
     <designables>
@@ -870,13 +904,9 @@
     </designables>
     <resources>
         <image name="28187" width="305" height="475"/>
-        <image name="magnifyingglass" width="128" height="128"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
-        <namedColor name="Lighter Blue Tone">
-            <color red="0.43500000238418579" green="0.67799997329711914" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Main Blue Tone">
             <color red="0.36899998784065247" green="0.66299998760223389" blue="0.82700002193450928" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
